# fast-grep-rust

./: .gitignore  ADAPTIVE_FREQ.md  AGENTS.md  CASE_INSENSITIVE.md  COMPACT_POSTINGS.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  SIMD_LITERAL.md  TASK.md
.cargo/: audit.toml
.claude/: settings.local.json
.claude/skills/fast-grep/: SKILL.md
.fgr/: meta.json
.github/workflows/: ci.yml  release.yml
benches/: baseline-30samples.json  benchmark_results.md  optimized-pre-tag.json  search.rs
docs/: app.js  index.html  style.css  techniques.md  vs-ripgrep.md
packaging/: README.md
packaging/homebrew/: update-formula.sh
packaging/scoop/: fast-grep.json  update-manifest.sh
scripts/: bench.sh  precision-test.sh
src/: casefold.rs  cli.rs  freq_real.rs  index.rs  lib.rs  main.rs  persist.rs  render.rs  searcher.rs  sparse.rs  trigram.rs
src/metal/: metal_impl.rs  mod.rs  shader.metal
tests/: case_insensitive.rs  context.rs  regex_correctness.rs  searcher_integration.rs
