[package]
name = "fast-grep"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fgr"
path = "src/main.rs"

[dependencies]
regex = "1"
rayon = "1"
roaring = "0.10"
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
ignore = "0.4"
crc32fast = "1"
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
memchr = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "search"
harness = false

[profile.release]
lto = true
codegen-units = 1
